objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>33 Act</fullName>
                </value>
                <value>
                    <fullName>34 Act</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>Attorney Growth/Up-Band</fullName>
                </value>
                <value>
                    <fullName>AttorneyJobs</fullName>
                </value>
                <value>
                    <fullName>Beyond the Bar</fullName>
                </value>
                <value>
                    <fullName>BIN/PR</fullName>
                </value>
                <value>
                    <fullName>Black&apos;s Law Digital</fullName>
                </value>
                <value>
                    <fullName>Blog Services</fullName>
                </value>
                <value>
                    <fullName>Boardlink</fullName>
                </value>
                <value>
                    <fullName>Brief Tools</fullName>
                </value>
                <value>
                    <fullName>Business Citator</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Case Analysis</fullName>
                </value>
                <value>
                    <fullName>Case Logistix</fullName>
                </value>
                <value>
                    <fullName>CaseNotebook</fullName>
                </value>
                <value>
                    <fullName>Case Outcomes</fullName>
                </value>
                <value>
                    <fullName>CD-ROM</fullName>
                </value>
                <value>
                    <fullName>Cite Advisor</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>Complinance Advisor</fullName>
                </value>
                <value>
                    <fullName>Corporate Ads</fullName>
                </value>
                <value>
                    <fullName>Correctional Facilities</fullName>
                </value>
                <value>
                    <fullName>Court Wire</fullName>
                </value>
                <value>
                    <fullName>Cowles</fullName>
                </value>
                <value>
                    <fullName>Deal Monitor</fullName>
                </value>
                <value>
                    <fullName>DealProof</fullName>
                </value>
                <value>
                    <fullName>Directory Products</fullName>
                </value>
                <value>
                    <fullName>Docket Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Eligible_Value__c</fullName>
        <label>Program Eligible Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Price_Increase__c</fullName>
        <formula>IF(Projected_Renewal_Price__c = 0,0,IF(Annualized_Base_Price__c = 0,0,((Projected_Renewal_Price__c/ Annualized_Base_Price__c ) - 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Price Increase %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Renewal_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Projected Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_Detail__c</fullName>
        <label>Quantity Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Item_Number__c</fullName>
        <label>Quotation Item Number`</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Item__c</fullName>
        <label>Quote Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_New_Product__c</fullName>
        <label>Reason For New Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uplift</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalCheck__c</fullName>
        <formula>Opportunity.Renewal_Flag__c == TRUE &amp;&amp; Opportunity.RecordType.Name == &apos;LATAM Renewal Opportunity&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RenewalCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <label>Renewal Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Product renewal date.</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Incremental_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Activity_Type__c , &quot;New&quot;), 0, TotalPrice - Annualized_Base_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Renewal Price vs Prior Year Annualized Base</inlineHelpText>
        <label>Renewal Incremental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Incremental_Net_New__c</fullName>
        <formula>Renewal_Incremental_Amount__c + Net_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Incremental + Net New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>This field will display the type of revenue for the product.</description>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental</fullName>
                    <default>true</default>
                    <label>Incremental</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_ID__c</fullName>
        <formula>Ship_To_Contact__r.SAP_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Product (Ship To Contact)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-To Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product (AccountShip-To Customer Name)</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Point__c</fullName>
        <label>Shipping Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8000</fullName>
                </value>
                <value>
                    <fullName>3000 Libreros Argentina</fullName>
                </value>
                <value>
                    <fullName>6000 Ecommerce Chile</fullName>
                </value>
                <value>
                    <fullName>0900</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1100</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>3000</fullName>
                </value>
                <value>
                    <fullName>4000</fullName>
                </value>
                <value>
                    <fullName>5000</fullName>
                </value>
                <value>
                    <fullName>6000</fullName>
                </value>
                <value>
                    <fullName>7000</fullName>
                </value>
                <value>
                    <fullName>8999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surcharge_Prct__c</fullName>
        <description>Default from the Opportunity Product</description>
        <label>Surcharge %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price_Calculation__c</fullName>
        <description>Total Price is not accessible from formula fields for Quote Line item. This field is used in Monthly Pricing calculations. This will be updated from work flow</description>
        <label>Total Price Calculation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Purchased__c</fullName>
        <label>Total Purchased</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unassigned_Tokens_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unassigned Tokens Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Added_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
        <label>Added To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProductLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProductLine</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Annual_Price_Non_Editable</fullName>
        <active>true</active>
        <description>Created as part of SFD-415</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
OR($Profile.Name = &quot;LatAm User&quot;,$Profile.Name = &quot;Partner Portal User&quot;), 
NOT(ISBLANK(Annual_Price__c )), 
OR( 
Opportunity.Renewal_Flag__c = true, 
AND( 
Opportunity.Short_Term_Sub__c &lt;&gt; true, 
NOT(OR( 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;RV01&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;TSL&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;LPTC&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;LPCL&quot;),
ISPICKVAL(Opportunity.Sales_Org__c,&quot;DFCL&quot;)  
)) 
) 
) 
)</errorConditionFormula>
        <errorMessage>The Subscription is not marked as Non Annual. Please remove the value from the Annual Price field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annual_Price_Non_Editable_W_O_Short_Term</fullName>
        <active>true</active>
        <description>Created as part of SFD-415</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
OR($Profile.Name = &quot;LatAm User&quot;,$Profile.Name = &quot;Partner Portal User&quot;), 
NOT(ISBLANK(Annual_Price__c )), 
Opportunity.Short_Term_Sub__c &lt;&gt; true, 
OR( 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;RV01&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;TSL&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;LPTC&quot;), 
ISPICKVAL(Opportunity.Sales_Org__c,&quot;LPCL&quot;),
ISPICKVAL(Opportunity.Sales_Org__c,&quot;DFCL&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>The Annual Price field should not be populated for Full Term Subscriptions. If this is a Non Annual Subscription please check the “Non Annual Sub” field on the header before populating Annual Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annual_Price_Req_for_Short_Term_Sub</fullName>
        <active>true</active>
        <description>Created as part of SFD-415</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
OR($Profile.Name = &quot;LatAm User&quot;,$Profile.Name = &quot;Partner Portal User&quot;), 
OR((ISPICKVAL( Opportunity.Sales_Org__c ,&quot;RV01&quot;)), 
(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;TSL&quot;)), 
(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LPTC&quot;)), 
(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LPCL&quot;)),
(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;DFCL&quot;))), 
ISBLANK( Annual_Price__c ), Opportunity.Short_Term_Sub__c = true ,Opportunity.Renewal_Flag__c &lt;&gt; true 
)</errorConditionFormula>
        <errorMessage>The Annual Price field is required for Non Annual Subscriptions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LATAM_OLI_Lock_to_Sales_atOpty_0</fullName>
        <active>true</active>
        <description>Lock the opportunity line Item when the opportunity sales stage is 0%</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
        $User.Username &lt;&gt; $Label.InformaticaUserName,
	NOT(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;SFWS&quot;)), 
	NOT(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;SCSI&quot;)), 
	NOT(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;TSCE&quot;)), 
	NOT(ISPICKVAL( Opportunity.Sales_Org__c ,&quot;EDIC&quot;)), 
	ISPICKVAL(Opportunity.StageName,&quot;0%&quot;),  
	OR( $Profile.Name = &quot;LatAm User&quot;, $Profile.Name = &quot;Partner Portal User&quot;), 
	$UserRole.Name &lt;&gt; &quot;LatAm Order Fulfillment&quot;, 
	Opportunity.RecordType.Name = &apos;LATAM Renewal Opportunity&apos;,
	Opportunity.Renewal_Flag__c = true
)</errorConditionFormula>
        <errorMessage>Opportunity Line Item should be fully locked if the Opportunity is 0%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LATAM_OLI_Lock_to_Sales_at_Opty_95_100</fullName>
        <active>true</active>
        <description>Opportunity Line Item should be fully locked if the Opportunity is 95% and 100%.</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
        $User.Username &lt;&gt; $Label.InformaticaUserName ,
	OR(ISPICKVAL(Opportunity.StageName,&quot;100%&quot;),ISPICKVAL(Opportunity.StageName,&quot;95%&quot;)) ,
	OR($Profile.Name = &quot;LatAm User&quot;,$Profile.Name = &quot;Partner Portal User&quot;),
	$UserRole.DeveloperName &lt;&gt; &quot;LatAm_Order_Fulfillment&quot;, 
	NOT(ISPICKVAL(Opportunity.Oppty_Mgmt_Type__c, &quot;Transaction Summary&quot;)) 
)</errorConditionFormula>
        <errorMessage>If the opportunity is at a stage of 95% or 100%, Line Item cannot be edited by sales; only by the Order processing team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LATAM_Renewals_OLI_Lock_at_Quote_Remove</fullName>
        <active>true</active>
        <description>[FRS 3.4.7]Opportunity Line Item should be fully locked if the Quote Status is Remove or Cancel</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
	$User.Username &lt;&gt; $Label.InformaticaUserName , 
	OR( $Profile.Name = &quot;LatAm User&quot;, $Profile.Name = &quot;Partner Portal User&quot;),	
	Opportunity.RecordType.DeveloperName = &apos;LATAM_Renewal_Opportunity&apos;, 
	Opportunity.Renewal_Flag__c = true,
	OR(	
		AND( 
			ISPICKVAL(Opportunity.Approval_Status__c, &quot;Pending Cancellation Approval&quot;),
			Opportunity.IsSkipOppLockingValidation__c = false	
		), 
		AND( 
			ISPICKVAL(Opportunity.Approval_Status__c, &quot;Cancellation Approved&quot;),			
			Opportunity.IsSkipOppLockingValidation__c = false, 
			$UserRole.DeveloperName &lt;&gt; &quot;LatAm_Order_Fulfillment&quot; 
		),
		AND( 
			ISPICKVAL(Opportunity.StageName, &quot;0%&quot;),
			ISPICKVAL(Opportunity.Status__c, &quot;Discarded&quot;)
		),
		AND( 
			ISPICKVAL(Opportunity.Approval_Status__c, &quot;Pending Removal&quot;), 						
			Opportunity.IsSkipOppLockingValidation__c = false	
		), 
		AND( 
			ISPICKVAL(Opportunity.Approval_Status__c, &quot;Removed&quot;),						
			Opportunity.IsSkipOppLockingValidation__c = false	
		)
	)	
)</errorConditionFormula>
        <errorMessage>If the Quote is submitted for Cancel or Remove, Line Item cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LCRM_Cancel_Reason_Mandatory_Renewals</fullName>
        <active>true</active>
        <description>CRM-2631</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
    Opportunity.LCRM_Sub_BU__c = &quot;UKI&quot;, 
    Opportunity.Is_GLI__c, 
    ISPICKVAL((LCRM_Action__c),&quot;Cancel&quot;), 
     ISPICKVAL((LCRM_Cancel_Reason__c),&quot;&quot;) 
)</errorConditionFormula>
        <errorMessage>Cancel Reason is mandatory if Action is Cancel.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LCRM_Opportunity_Product_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
Opportunity.Is_GLI__c, 
Opportunity.LCRM_Sub_BU__c = &quot;UKI&quot;, 
Opportunity.IsClosed 
)</errorConditionFormula>
        <errorMessage>Products cannot be added/modified on a closed Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LCRM_Renewals_Pro_data_validation_rule</fullName>
        <active>true</active>
        <description>CRM-2113</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
 ISCHANGED( LCRM_Action__c ) ,
Opportunity.LCRM_Sub_BU__c = &quot;UKI&quot;,
        Opportunity.Is_GLI__c ,
     OR(
           AND(
		        ISPICKVAL( PRIORVALUE( LCRM_Action__c ),&quot;Add&quot;),
                NOT(ISPICKVAL(LCRM_Action__c,&quot;Remove&quot;))
				),
				
			AND(
			ISPICKVAL( PRIORVALUE( LCRM_Action__c ),&quot;Remove&quot;),
			NOT(ISPICKVAL(LCRM_Action__c,&quot;Add&quot;))
			),
           AND(
            (ISPICKVAL( PRIORVALUE( LCRM_Action__c ),&quot;Renew&quot;)),
                NOT(ISPICKVAL(LCRM_Action__c,&quot;Cancel&quot;))
              ),
		   AND(
            (ISPICKVAL( PRIORVALUE( LCRM_Action__c ),&quot;Cancel&quot;)),
                NOT(ISPICKVAL(LCRM_Action__c,&quot;Renew&quot;))
              )
       ))</errorConditionFormula>
        <errorMessage>Please select the appropriate action value. Cancel can only be done on Renew Products. Remove can only be done on Add Products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LCRM_UKI_Product_Action_Mandatory</fullName>
        <active>true</active>
        <description>Product Action field should be mandatory against all UKI product lines in GLI.</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
Opportunity.LCRM_Sub_BU__c = &quot;UKI&quot;, 
Opportunity.Is_GLI__c, 
ISPICKVAL((LCRM_Action__c),&quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Product Action is mandatory against all UKI product lines.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LatAm_OptyLI_Subscription_Dates_Req</fullName>
        <active>true</active>
        <description>For only LatAm Profiles  (and not in-flight) this requires that the Expected Revenue Date and Expiration Date be populated if:  Product has Subscribable Indicator value of “Subscribable”
		Option 2:  The Opportunity Category is SUSCRIPCION</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,

		 OR (
		 ISPICKVAL( Opportunity.Sales_Org__c  ,&quot;LLEY&quot;), 
		 ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LLPA&quot;),
		 ISPICKVAL( Opportunity.Sales_Org__c ,&quot;LLUR&quot;),
		 ISPICKVAL( Opportunity.Sales_Org__c ,&quot;BEJE&quot;),
                 ISPICKVAL( Opportunity.Sales_Org__c,&quot;DFCL&quot;)
 ),
		OR(
		ISNULL(Opportunity.Expected_Revenue_Date__c),
		ISNULL(Opportunity.Expiration_Date__c)),
		OR(
		$Profile.Name = &quot;LatAm User&quot;,
		$Profile.Name = &quot;Partner Portal User&quot;),
		OR(
		Opportunity.Has_LatAm_Stabilization_Primary__c &gt; 0,
		Opportunity.All_Quote_Count__c = 0,Opportunity.RecordType.Name = &apos;LATAM Renewal Opportunity&apos;),
		ISPICKVAL(PricebookEntry.Product2.Subscribable_Indicator__c,&quot;Subscribable&quot;),Opportunity.Is_Child_Opportunity__c &lt;&gt; true 
		)</errorConditionFormula>
        <errorMessage>Expected Revenue Date and Expiration Date cannot be blank. Please, review and include a value for both fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LatAm_Opty_LI_Subscription_Date_Sequence</fullName>
        <active>true</active>
        <description>For application LatAm Profiles (and not in-flight) only this requires that the Expected Revenue Date be Prior to the Expiration Date if  Product has Subscribable Indicator value of “Subscribable” .</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
Opportunity.Expected_Revenue_Date__c &gt;= Opportunity.Expiration_Date__c,
OR(
$Profile.Name = &quot;LatAm User&quot;,
$Profile.Name = &quot;Partner Portal User&quot;),
OR(
Opportunity.Has_LatAm_Stabilization_Primary__c &gt; 0,
Opportunity.All_Quote_Count__c = 0,Opportunity.RecordType.Name = &apos;LATAM Renewal Opportunity&apos;),
ISPICKVAL(PricebookEntry.Product2.Subscribable_Indicator__c,&quot;Subscribable&quot;) 
)</errorConditionFormula>
        <errorMessage>Expected Revenue Date cannot be more than or equal to the Expiration Date. Please, review and correct the dates in those fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Opportunity_Line_Item</fullName>
        <active>true</active>
        <description>Lock user from making changes once Opportunity  approved.</description>
        <errorConditionFormula>AND( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,
	Opportunity.SyncedQuote.Pricing_Approval_Complete__c = True, 
	OR( 
		ISCHANGED(Discount), 
		ISCHANGED(UnitPrice),   
		ISCHANGED(Quantity),
		AND(ISCHANGED( Annual_Price__c ),Opportunity.Renewal_Flag__c  &lt;&gt; true)
	), 
	Opportunity.Is_Child_Opportunity__c &lt;&gt; TRUE 
)</errorConditionFormula>
        <errorMessage>You cannot modify Discount, Sales Price, Annual Price or Quantity once Quote pricing approval is completed. To proceed with modification, please click “Unlock line item” button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_ACV_need_to_be_greater_than_0</fullName>
        <active>true</active>
        <description>The values in the &quot; New ACV&quot; field needs to be grater than &quot;0&quot;</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,OR(AND(ISNEW(),Is_GLI__c , LCRM_New_ACV_SalesPrice__c  &lt; 0),AND(ISCHANGED(LCRM_New_ACV_SalesPrice__c  ),Is_GLI__c ,LCRM_New_ACV_SalesPrice__c  &lt; 0)))</errorConditionFormula>
        <errorDisplayField>LCRM_New_ACV_SalesPrice__c</errorDisplayField>
        <errorMessage>The values entered in the &quot;New ACV/Sales Price&quot; needs to be greater than or equal to &quot;0&quot;. Please enter a valid value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prmotinal_Dis_Amt_to_b_equal_or_grater_0</fullName>
        <active>true</active>
        <description>Net After Propotional Disc Amt needs to be equal or greater than 0</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,OR(AND(ISNEW(),Is_GLI__c , LCRM_Net_After_Proportional_Disc_Amt__c &lt; 0),AND(ISCHANGED(LCRM_Net_After_Proportional_Disc_Amt__c),Is_GLI__c ,LCRM_Net_After_Proportional_Disc_Amt__c &lt; 0)))</errorConditionFormula>
        <errorDisplayField>LCRM_Net_After_Proportional_Disc_Amt__c</errorDisplayField>
        <errorMessage>The value entered in the &quot;Net After Propotional Disc Amt &quot; field must be greater or equal to &quot;0&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotional_Amt_equal_or_grater_than_0</fullName>
        <active>true</active>
        <description>List Net of Promotional Amt needs to be greater or equal to 0</description>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,OR(AND(ISNEW(),Is_GLI__c , LCRM_List_Net_of_Promotional_Amt__c &lt; 0),AND(ISCHANGED(LCRM_List_Net_of_Promotional_Amt__c ),Is_GLI__c ,LCRM_List_Net_of_Promotional_Amt__c &lt; 0)))</errorConditionFormula>
        <errorDisplayField>LCRM_List_Net_of_Promotional_Amt__c</errorDisplayField>
        <errorMessage>The value entered in the &quot;List Net of Promotional Amt&quot; field must be greater or equal to &quot;0&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Renew_value_for_UKI_Users</fullName>
        <active>true</active>
        <description>Created as part of MCL-2432
Added Contract Wizard LOTUS Custom permission as a part of DPS-9957</description>
        <errorConditionFormula>AND(
($Profile.Name = &quot;UKI Users&quot; || $Permission.Contract_Wizard_LOTUS) ,
TEXT(LCRM_Action__c)==&quot;Renew&quot;,
ISNEW()
)</errorConditionFormula>
        <errorMessage>Renew action is not applicable for UKI Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Units_need_to_be_greater_than_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c = false,OR(AND(ISNEW(),Is_GLI__c , LCRM_Units__c &lt;= 0),AND(ISCHANGED(LCRM_Units__c),Is_GLI__c ,LCRM_Units__c &lt;= 0)))</errorConditionFormula>
        <errorDisplayField>LCRM_Units__c</errorDisplayField>
        <errorMessage>The values entered in the &quot;Units&quot; field must be greater or equal to &quot;1&quot;.</errorMessage>
    </validationRules>
</CustomObject>